# openanim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/common/: bind.cpp  bind.h  viewport.cpp  viewport.h
src/demo/: CMakeLists.txt  main.cpp
src/openanim/: Attribute.cpp  Attribute.h  Attributes.cpp  Attributes.h  CMakeLists.txt  Children.h  Hierarchy.cpp  Hierarchy.h  LexicalCast.h  RTTI.cpp  RTTI.h  Skeleton.cpp  Skeleton.h  Transform.cpp  Transform.h
src/openanim/loaders/: Tokenizer.cpp  Tokenizer.h  asf.cpp  asf.h
src/tests/: CMakeLists.txt  Hierarchy.cpp  Skeleton.cpp  Transform.cpp
